--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title> Tushar Ganotra</title>
 
-  <link rel="stylesheet" href="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\CSS - Personal Website\style.css">
+  <link rel="stylesheet" href="https://github.com/Tushar-Ganotra/My-Website/blob/main/style.css">
 
 </head>
 
