--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      Tushar Ganotra
 
    </h1>
-  Founder Of<a href="https://www.learneverything.xyz/"> learnerything.xyz</a>
+  Founder Of<a href="https://www.programwebtech.com/"> programwebtech.com</a>
   <p>I am a passionate Blogger and a Web Developer , I like learning new things </p>
 
 </td>
@@ -52,13 +52,13 @@
       </tr>
       <tr >
         <td colspan="20" >2019-2020 / </td>
-        <td colspan="20">Web Developer at <a href="https://www.learneverything.xyz/">learnerything.xyz</a></td>
+        <td colspan="20">Web Developer at <a href="https://www.programwebtech.com/">programwebtech.com</a></td>
       </tr>
       <tr>
         <td colspan="20">2019-2020 / </td>
         <td colspan="2" >
 
-         Content Writer at <a href="https://www.learneverything.xyz/">learnerything.xyz</a></td>
+         Content Writer at <a href="https://www.programwebtech.com">programwebtech.com</a></td>
       </tr>
     </table>
 
