--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title> Tushar Ganotra</title>
+   
+<meta name="description" content= "Who is Tushar Ganotra know more about him" />
+<meta name="robots" content= "index, follow"/>
 
   <link rel="stylesheet" href="https://github.com/Tushar-Ganotra/My-Website/blob/main/style.css">
 
