--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <title> Tushar Ganotra</title>
    
-<meta name="description" content= "Who is Tushar Ganotra know more about him" />
-<meta name="robots" content= "index, follow"/>
+<meta name="description" content= "Who is Tushar Ganotra know more about him" >
+  <meta name="keywords" content= "Who is tushar ganotra,tusharganotra,Tusharganotra.ml,about tushar ganotra">
+<meta name="robots" content= "index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://github.com/Tushar-Ganotra/My-Website/blob/main/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
