--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
   </table>
 
-  <a href="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\HTML - Personal Website\contactus.html">
-    <h2>Contact Us</h2>
+  <a tupe="text/html" href="contactus.html">
+    <h2>Contact Me</h2>
   </a>
 
 
