--- a/afterContactUs.html
+++ b/afterContactUs.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Thank You </title>
-    <link rel="stylesheet" href="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\CSS - Personal Website\style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Thankyou Your Requests has been submitted</h1>
-    <a href="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\HTML - Personal Website\index.html">
+    <a type="text/html" href="index.html">
       click Here</a>
   to go back to home page
   </body>
