--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\CSS - Personal Website\style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h2>My Contact Information
@@ -17,7 +17,7 @@
 <P>
   You can Contact Me By filling your details below
 </P>
-<form class="" action="C:\Users\lenovo\Desktop\sandisk pen drive\New folder\Web Development\HTML - Personal Website\afterContactUs.html" method="post">
+<form class="" action="afterContactUs.html" method="post">
 
 <label>Enter Your Name(Required)</label><br />
 <input type="text" name="" value=""><br /><br />
